EasySCP 2.1.0 ChangeLog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2016-07-24
	- DOCS:
		* Add: Ubuntu 16.04 LTS package file

	- GUI:
   		* Update: jQuery to version 1.12.4
		* Add: Cronjobs for all users
		* Add: Call Iana update from GUI
		* Improved: Template files and remove duplicate content/functions

	- Setup:
		* Add: Ubuntu 16.04 LTS support

	- System:
		* Add: PHP 7 support
		* Improved: Menu handling
		* Fix: Creation and deletion of vuXXXX DNS entries (Issue #9)
		* Add: Configuring separate SSL certificates for domain, alias and subdomains (Issue #8)

	- TOOLS:
		* Update: net2ftp to version 1.0 build 50
		* Update: phpMyAdmin to version 4.0.10.16
		* Update: Roundcube to version 1.0.9